aprendiendo property binding, event binding

--- a/src/app/pages/labs/labs.component.html
+++ b/src/app/pages/labs/labs.component.html
@@ -1,1 +1,2 @@
-<p>labs works!</p>
+<p>Hola mi nombre es {{name}} tengo {{age}} años, tengo un {{tipo_mascota}} llamado {{nombre_mascota}} y él es el jefe, aquí una prueba</p>
+<img [src]="img" alt="foto de Garfi">
