Manejando estructura de control ngFor con array

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,6 +8,7 @@
         placeholder="Type new todo"
         autofocus
         type="text"
+        (change)="changeHandler($event)"
       />
     </div>
   </header>
@@ -15,6 +16,17 @@
     <!-- This section should be hidden by default and shown when there are todos -->
     <section class="main">
       <ul class="todo-list">
+        <!--@for(task of tasks(); track task){
+        }-->
+        <li *ngFor="let task of tasks(); index as i">
+          <div class="view">
+            <input class="toggle" type="checkbox" />
+            <label>{{task.title}}</label>
+            <button class="destroy" (click)="deleteTask(i)"></button>
+          </div>
+          <input class="edit" value="Buy a unicorn" />
+        </li>
+        <!--
         <li class="completed">
           <div class="view">
             <input class="toggle" type="checkbox" checked />
@@ -23,6 +35,7 @@
           </div>
           <input class="edit" value="Learn JavaScript" />
         </li>
+
         <li>
           <div class="view">
             <input class="toggle" type="checkbox" />
@@ -31,6 +44,7 @@
           </div>
           <input class="edit" value="Buy a unicorn" />
         </li>
+
         <li class="editing">
           <div class="view">
             <input class="toggle" type="checkbox" />
@@ -39,6 +53,7 @@
           </div>
           <input class="edit" value="Make dishes" />
         </li>
+        -->
       </ul>
     </section>
     <!-- This footer should be hidden by default and shown when there are todos -->
