--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -265,6 +265,7 @@ home.component.css
   font-size: 30px;
   color: #949494;
   transition: color 0.2s ease-out;
+  cursor:pointer
 }
 
 .todo-list li .destroy:hover,
